# miru

./: PROVIDER_MODULE_ARCHITECTURAL_REVIEW.md  README.md  STAGE_2_1_COMPLETE.md  package.json  pnpm-lock.yaml  vite.config.ts
src-tauri/: ARCHITECTURE.md  Cargo.toml  KNOWN_ISSUES.md  PARALLEL_INGESTION_COMPLETE.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_PHASE_1_COMPLETE.md  PERFORMANCE_STATUS.md  diesel.toml  tauri.conf.json
src-tauri/migrations/2025-09-11-144258_implement_unified_anime_schema/: down.sql
src-tauri/migrations/2025-09-12-005925_remove_mal_id_field/: up.sql
src-tauri/migrations/2025-09-12-013545_remove_genre_mal_id_dependency/: down.sql
src-tauri/migrations/2025-09-12-015232_add_unique_constraint_to_genre_name/: down.sql
src-tauri/migrations/2025-09-13-135721_drop_deprecated_anime_columns/: down.sql
src-tauri/migrations/2025-09-13-151200_unify_anime_scoring_system/: down.sql
src-tauri/migrations/2025-09-14-110241_add_search_performance_indexes/: up.sql
src-tauri/migrations/2025-10-03-172500_add_relations_enrichment/: down.sql  up.sql
src-tauri/migrations/2025-10-04-092812_simplify_anime_relations/: down.sql  up.sql
src-tauri/migrations/2025-10-04-130514_rename_discovered_at_to_synced_at/: down.sql  up.sql
src-tauri/migrations/2025-10-10-125445_add_semantic_relation_categories/: down.sql  up.sql
src-tauri/migrations/2025-10-10-132527_round_existing_scores/: down.sql  up.sql
src-tauri/migrations/2025-10-13-090702_create_background_jobs_table/: down.sql  up.sql
src-tauri/migrations/2025-10-19-121027_create_anime_media_tables/: down.sql  up.sql
src-tauri/src/: lib.rs  main.rs  schema.rs
src-tauri/src/application/commands/: anime_commands.rs  collection_commands.rs  mod.rs  provider_commands.rs
src-tauri/src/application/services/: anime_service.rs  collection_service.rs  import_service.rs  mod.rs  provider_manager.rs
src-tauri/src/commands/: mod.rs  registry.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/entities/: anime.rs  collection.rs  genre.rs  mod.rs  user_rating.rs
src-tauri/src/domain/events/: anime_events.rs  collection_events.rs  mod.rs
src-tauri/src/domain/repositories/: anime_repository.rs  collection_repository.rs  mod.rs
src-tauri/src/domain/services/: mod.rs  score_calculator.rs  unified_data_resolver.rs
src-tauri/src/domain/traits/: anime_provider_client.rs  mod.rs  scoreable.rs
src-tauri/src/domain/value_objects/: anime_status.rs  anime_tier.rs  anime_type.rs  mod.rs  quality_metrics.rs  unified_rating.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/cache/: mod.rs  redis_cache.rs
src-tauri/src/infrastructure/database/: connection.rs  mod.rs  schema.rs
src-tauri/src/infrastructure/shared/: mod.rs  provider_cache.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/anime/: commands.rs  mod.rs
src-tauri/src/modules/collection/: mod.rs  (+1 more)
src-tauri/src/shared/: database.rs  database_state.rs  mod.rs
src-tauri/tests/: age_rating_diagnostic_test.rs  anime_relations_integration_test.rs  background_worker_test.rs  cache_performance_test.rs  data_quality_integration_test.rs  e2e_provider_integration_test.rs  ingestion_pipeline_test.rs  jikan_integration_test.rs  job_repository_test.rs  rate_limiter_test.rs  relations_bidirectional_test.rs  relations_integration_test.rs  relations_real_data_e2e_test.rs  relations_test.rs  studio_diagnostic_test.rs  tmdb_adapter_test.rs  tmdb_integration_test.rs
src-tauri/tests/anilist/: adapter_test.rs  api_simple_test.rs  graphql_test.rs  integration_test.rs  models_test.rs
src-tauri/tests/jikan/: adapter_test.rs  api_cached_test.rs  api_simple_test.rs  integration_test.rs  models_test.rs
src-tauri/tests/utils/: cleanup_test_dbs.sh  db.rs  factories.rs  helpers.rs  mod.rs  test_db.rs
(+372 files in other folders)
