[package]
name = "miru"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "miru_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
diesel = { version = "2.2.0", features = [
    "postgres",
    "uuid",
    "chrono",
    "r2d2",
    "64-column-tables",
    "serde_json",
] }

diesel_migrations = "2.2.0"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
urlencoding = "2.1"

# Rate limiting
governor = { version = "0.6", features = ["std", "jitter"] }

# Error handling
thiserror = "2.0.16"
anyhow = "1.0"
futures = "0.3"

# Utils
dotenvy = "0.15"
uuid = { version = "1.6", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.8", features = ["serde"] }
regex = "1.10"
dashmap = "6.0"
rand = "0.8"

# Fuzzy string matching
strsim = "0.11"

# Logging
env_logger = "0.10"
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"



# types generation for frontend
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta = { version = "=2.0.0-rc.22", features = ["derive", "uuid", "chrono"] }
tauri-plugin-log = "2.7.0"

[dev-dependencies]
# Testing
tokio-test = "0.4"
futures = "0.3"
mockall = "0.13.1"
